; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_unix.c_may_core_dump.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_unix.c_may_core_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@deadly_signal = common dso_local global i64 0, align 8
@SIG_DFL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @may_core_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @may_core_dump() #0 {
  %1 = load i64, i64* @deadly_signal, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = load i64, i64* @deadly_signal, align 8
  %5 = load i32, i32* @SIG_DFL, align 4
  %6 = call i32 @signal(i64 %4, i32 %5)
  %7 = call i32 (...) @getpid()
  %8 = load i64, i64* @deadly_signal, align 8
  %9 = call i32 @kill(i32 %7, i64 %8)
  br label %10

10:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @signal(i64, i32) #1

declare dso_local i32 @kill(i32, i64) #1

declare dso_local i32 @getpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
